# NasFusion

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.docker.md  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.yml  start.ps1
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  test_enhancements.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_split_votes_columns.py  003_add_preset_id_to_pt_sites.py  087aa6017ffc_add_raw_data_and_family.py  193dbdf95aa1_fix_download_task_storage_mount_id_.py  29a741a5bb1c_add_user_profile_to_pt_sites.py  50497ce09712_add_organize_settings_to_subscription.py  51a3d3495948_remove_auto_download_strategy_column.py  56548afe91a9_backfill_original_category_fields_from_.py  6754bf4afb75_add_sub_title_column_to_media_files.py  7a46fefe5863_remove_pt_resource_id_from_unified_adult.py  a1b2c3d4e5f6_add_unified_adult_table.py  a1b2c3d4e5f6_add_unique_constraint_site_torrent.py  a9b8c7d6e5f4_add_mcp_external_servers_table.py  aabd97e3448e_add_unifiedperson_and_credit_models.py  ae7ee06b0f4f_add_original_category_fields_to_pt_.py  b1c2d3e4f5a6_add_unique_constraint_site_torrent.py  b3547a8cd8f4_widen_unified_persons_imdb_id_and_.py  b93c5d19cfae_remove_original_category_name_from_pt_.py  c618710b817c_add_use_override_for_sync_to_.py  c7d8e9f0a1b2_add_llm_configs_table.py  d0f1a2b3c4d5_add_from_nfo_to_match_method_check.py  d4e5f6a7b8c9_add_login_history_table.py  e1f2a3b4c5d6_add_created_at_indexes_for_dashboard.py  e2f3a4b5c6d7_add_from_dirname_to_match_method_check.py  f51eb0272e9c_add_date_created_to_media_server_items.py  f7a8b9c0d1e2_pad_season_dir_template_to_two_digits.py
backend/app/: __main__.py  main.py
backend/app/adapters/: base.py
backend/app/constants/: __init__.py  ai_agent.py  auth.py  downloader.py  event.py  media.py  media_directory.py  media_file.py  media_server.py  notification.py  promotion.py  pt_site.py  resource_identification.py  site_presets.py  subscription.py  sync.py  task.py  trending.py
backend/app/core/: config.py  database.py  db_types.py  dependencies.py  init.py  init_scheduled_tasks.py  json_types.py  logging.py
backend/app/events/: __init__.py  bus.py  manager.py
backend/app/mcp/: __init__.py  client.py  server.py
backend/app/models/: __init__.py  ai_agent.py  base.py  download_task.py  downloader_config.py  image_cache.py  llm_config.py  login_history.py  mcp_server.py  media_directory.py  media_file.py  media_server_config.py  media_server_item.py  media_server_library.py  media_server_library_stats.py  media_server_watch_history.py  notification.py  organize_config.py  pt_metadata.py  pt_resource.py  pt_resource_detail.py  pt_site.py  resource_mapping.py  scheduled_task.py  storage_mount.py  subscription.py  subscription_check_log.py  sync_log.py  system_setting.py  task_execution.py  trending_collection.py  unified_adult.py  unified_movie.py  unified_person.py  unified_tv_series.py  user.py
backend/app/prompts/: system.yaml
backend/app/schemas/: ai_agent.py  base.py  dashboard.py  downloader.py  file_system.py  llm_config.py  login_history.py  mcp.py  media_directory.py  media_file.py  media_server.py  notification.py  organize_config.py  pt_metadata.py  pt_resource.py  pt_resource_detail.py  (+12 more)
backend/docs/: IMPLEMENTATION_SUMMARY.md  MIGRATION_REPORT.md  agent_enhancements_test_guide.md  alembic_migration.md  authentication_token_management.md  category_management.md  douban api.json  event_bus_guide.md  media_library_directory_refactor.md  media_organization_guide.md  media_server_items_migration.md  metadata_management.md  metadata_refactor.md  migrate_handlers.py  mteam_integration_guide.md  mteam_quick_start.md  notification_system_design.md  notification_system_refactoring.md  production_deploy.md  pt_adapter_extension_plan.md  resource_detail_strategy.md  scraping_logic.md  simplified_timezone_guide.md  subscription_scheduling.md  task_handler_architecture.md  telegram_chat_integration.md  timezone_implementation_guide.md  tmdb_integration_guide.md  文件整理和刮削.md
backend/scripts/: CHANGELOG_merge_script.md  DOCKER_EXECUTION_GUIDE.md  README.md  README_merge_duplicate_movies.md  add_media_directory_columns.py  add_media_server_tables.py  add_organize_mode_column.py  backfill_categories.py  cleanup_eadir.py  fix_directory_hierarchy.py  fix_douban_celebrities.py  fix_identification_status.py  fix_media_directory_constraint.py  fix_metadata_encoding.py  init_identification_priority.py  merge_duplicate_movies.py  migrate_task_types.py  migrate_to_directory_storage.py  normalize_media_file_paths.py  update_series_names.py  verify_metadata_fix.py
(+482 files in other folders)
