[project]
name = "nasfusion"
version = "0.1.0"
description = "PT Site Media Resource Management System"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "NasFusion Team"}
]

dependencies = [
    # Web Framework
    "fastapi[all]==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    # Database
    "sqlalchemy[asyncio]==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",          # PostgreSQL async driver
    "aiosqlite==0.19.0",        # SQLite async driver
    # Data Validation
    "pydantic>=2.7.2",
    "pydantic-settings>=2.5.2",
    "email-validator==2.1.0",
    # Async Tasks
    "APScheduler==3.10.4",
    # HTTP Client
    "httpx>=0.27.1",
    "aiohttp==3.9.1",
    "requests==2.32.3",
    # HTML Parsing
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0",
    # Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "cryptography==42.0.0",
    # Utilities
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    # OpenAI Integration
    "openai==1.7.2",
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    # Torrent Parsing
    "bencodepy==0.9.5",
    # Media Info
    "pymediainfo==6.1.0",
    "guessit==3.8.0",           # Media title parsing
    # File Operations
    "aiofiles==23.2.1",
    # Monitoring
    "python-json-logger==2.0.7",
    "telegramify-markdown>=1.2.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    # Code Quality
    "black==23.12.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "isort==5.13.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/nasfusion"
Repository = "https://github.com/yourusername/nasfusion"

# 作为应用部署（非库），不需要把自身构建成可安装包。
# uv 仅管理依赖与虚拟环境，源码通过 PYTHONPATH=. 直接运行。
[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
